--- a/public/portfolio/index.html
+++ b/public/portfolio/index.html
@@ -134,6 +134,116 @@
                                     <td class="item">컴퓨터 그래픽스 운용기능사 (필기)</td>
                                 </tr>
                             </table>
+                            <!-- <ul class="info-txt-list">
+                                <li class="info-txt-item">
+                                    <span class="item">Name</span>
+                                    <span class="item">Birth</span>
+                                    <span class="item">Phone</span>
+                                    <span class="item">Email</span>
+                                </li>
+                                <li class="info-txt-item">
+                                    <span class="item">23 . 3 - 23 . 7</span>
+                                    <span class="item">22 . 1 - 23 . 1</span>
+                                    <span class="item">19 . 3 - 22 . 2</span>
+                                    <span class="item">17 . 2 - 19 . 2</span>
+                                </li>
+                                <li class="info-txt-item">
+                                    <span class="item">2023</span>
+                                </li>
+                            </ul>
+                            <ul class="info-txt-list">
+                                <li class="info-txt-item">
+                                    <span class="item">황선하, Hwang Seonha</span>
+                                    <span class="item">2000 . 11 . 9</span>
+                                    <span class="item">010 5214 0447</span>
+                                    <span class="item">sarah04470@naver.com</span>
+                                </li>
+                                <li class="info-txt-item">
+                                    <span class="item">프론트엔드 과정 수료</span>
+                                    <span class="item">DDP 디자인스토어 웹디자이너</span>
+                                    <span class="item">경인여자대학교 광고디자인과 졸업</span>
+                                    <span class="item">옥련여자고등학교 졸업</span>
+                                </li>
+                                <li class="info-txt-item">
+                                    <span class="item">컴퓨터 그래픽스 운용기능사 (필기)</span>
+                                </li>
+                            </ul> -->
+                            <!-- <ul class="info-txt-list">
+                                <li class="info-txt-item">
+                                    <span class="item">Name</span>
+                                    <span class="item">Birth</span>
+                                    <span class="item">Phone</span>
+                                    <span class="item">Email</span>
+                                </li>
+                                <li class="info-txt-item">
+                                    <span class="item">23 . 3 - 23 . 7</span>
+                                    <span class="item">22 . 1 - 23 . 1</span>
+                                    <span class="item">19 . 3 - 22 . 2</span>
+                                    <span class="item">17 . 2 - 19 . 2</span>
+                                </li>
+                                <li class="info-txt-item">
+                                    <span class="item">2023</span>
+                                </li>
+                            </ul>
+                            <ul class="info-txt-list">
+                                <li class="info-txt-item">
+                                    <span class="item">황선하, Hwang Seonha</span>
+                                    <span class="item">2000 . 11 . 9</span>
+                                    <span class="item">010 5214 0447</span>
+                                    <span class="item">sarah04470@naver.com</span>
+                                </li>
+                                <li class="info-txt-item">
+                                    <span class="item">프론트엔드 과정 수료</span>
+                                    <span class="item">DDP 디자인스토어 웹디자이너</span>
+                                    <span class="item">경인여자대학교 광고디자인과 졸업</span>
+                                    <span class="item">옥련여자고등학교 졸업</span>
+                                </li>
+                                <li class="info-txt-item">
+                                    <span class="item">컴퓨터 그래픽스 운용기능사 (필기)</span>
+                                </li>
+                            </ul> -->
+                            <!-- <ul class="info-txt-list">
+                                <li class="info-txt-item">
+                                    <span class="item">Name</span>
+                                    <span class="item">황선하, Hwang Seonha</span>
+                                </li>
+                                <li class="info-txt-item">
+                                    <span class="item">Birth</span>
+                                    <span class="item">2000 . 11 . 9</span>
+                                </li>
+                                <li class="info-txt-item">
+                                    <span class="item">Phone</span>
+                                    <span class="item"> 010 5214 0447</span>
+                                </li>
+                                <li class="info-txt-item">
+                                    <span class="item">Email</span>
+                                    <span class="item">sarah04470@naver.com</span>
+                                </li>
+                            </ul>
+                            <ul class="info-txt-list">
+                                <li class="info-txt-item">
+                                    <span class="item">23 . 3 - 23 . 7</span>
+                                    <span class="item">프론트엔드 과정 수료</span>
+                                </li>
+                                <li class="info-txt-item">
+                                    <span class="item">22 . 1 - 23 . 1</span>
+                                    <span class="item"> DDP 디자인스토어 웹디자이너</span>
+                                </li>
+                                <li class="info-txt-item">
+                                    <span class="item">19 . 3 - 22 . 2</span>
+                                    <span class="item">경인여자대학교 광고디자인과 졸업</span>
+                                </li>
+                                <li class="info-txt-item">
+                                    <span class="item">17 . 2 - 19 . 2</span>
+                                    <span class="item">옥련여자고등학교 졸업</span>
+                                </li>
+                            </ul>
+                            <ul class="info-txt-list">
+                                <li class="info-txt-item">
+                                    <span class="item">2023</span>
+                                    <span class="item">컴퓨터 그래픽스 운용기능사 (필기)</span>
+                                </li>
+                            </ul> -->
                         </div>
                     </div>
                 </div>
